task 3 - some fix